data/all-infer-tutorial/command-injection3/infer-out/report.txt
#0
tutorial/command-injection3.c:16: error: Api Misuse
  CmdInjection.
  14.     strcpy(cmd, home);
  15.     strcat(cmd, INITCMD);
  16.     execl(cmd, NULL);
          ^
  17.   }
  18. }

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
      Api Misuse(API_MISUSE): 1
